# autodaw

./: .gitignore  Makefile  README.md  artifact_manager.py  autodaw.db  experiment_automated.py  experiment_config_generator.py  experiment_convergence.py  experiment_convergence_mock.py  experiment_session_based.py  experiment_single_reaper.py  main.py  pyproject.toml  start.sh  target_audio_generator.py
Archive/: analysis_summary.json  decode_analysis.py  decoded_base64_hex.txt  decoded_base64_raw.txt  detailed_report.txt  diff_analyzer.py  explore_vst_data.py  fx_parameter_explorer.py  launch_reaper_with_script.py  main.py  project_state_reporter.py  reaper_project_report_20250828_114453.json  reaper_project_report_20250828_114504.json  reaper_project_report_20250828_114810.json  reaper_project_report_20250828_115015.json  reapy_script.py  reascript_example.py  repl_parameter_explorer.py  rpp_compare.py  rpp_diff_analyzer.py  serum-pitch-params.json  serum_init.RPP  serum_init_2.RPP  serum_modified.RPP  serum_oct_neg1.RPP  (+11 more)
demos/gui_comparison/: .gitignore  Makefile  pyproject.toml  run_backend.py
demos/gui_comparison/backend/: main.py
demos/gui_comparison/frontend/: package.json
demos/gui_comparison/frontend/public/: index.html
demos/gui_comparison/frontend/src/: App.js  index.css
demos/gui_comparison/tests/: test_api.py
ga_frequency_demo/: README.md  main.py  pyproject.toml
reaper/: .coverage  .gitignore  README.md  VISION_DEBUG.md  automation_config.txt  create_test_session.py  fx_parameters.json  generate_random_midi.py  install_vision_deps.py  main.py  main_v2.py  pyproject.toml  serum1.RPP  test_melody.mid
reaper/configs/: test_random_session.json
reaper/docs/: REAPER API functions.html
reaper/midi/test_random_session/: test_random_session_chords_Am_minor.mid  test_random_session_melody_C_major.mid
reaper/outputs/: automation_config.txt
reaper/outputs/session_b6657d58/: midi_notes_sessionb6657d58_20250830_111633.txt  param_change_sessionb6657d58_20250830_111633.txt  params_sessionb6657d58_20250830_111633.txt
reaper/outputs/session_b6657d58/session_b6657d58/logs/: render_log_render_001_20250830_111633.txt
reaper/outputs/session_b6657d58_render_001/: midi_notes_sessionb6657d58_render_001_20250830_112156.txt  midi_notes_sessionb6657d58_render_001_20250830_133119.txt  param_change_sessionb6657d58_render_001_20250830_112156.txt  param_change_sessionb6657d58_render_001_20250830_133119.txt  session_metadata.json
reaper/outputs/session_b6657d58_render_001/session_b6657d58_render_001/logs/: render_log_render_20250830_112156.txt
reaper/reascripts/: README.md  add_midi.lua  change_params.lua  change_params_octave.lua  clear_project.lua  fx_updater.lua  get_params.lua  main.lua  main_v2.lua  parameter_discovery.lua  render_audio.lua  render_project.lua  setup_simple_project.lua  test_clean.lua  test_standalone.lua  update_fx_params.lua
reaper/reascripts/lib/: constants.lua  error_handler.lua  fx_manager.lua  json.lua  logger.lua  project_manager.lua  session_manager.lua  utils.lua
reaper/reascripts/tests/: README.md  run_tests.lua  test_constants.lua  test_error_handler.lua  test_fx_manager.lua  test_json.lua  test_runner.lua  test_session_manager.lua  test_utils.lua
reaper/session-configs/: example_session.json  ga_eval_0_44269.json  ga_eval_0_60864.json  ga_eval_1_57751.json  ga_eval_1_62967.json  generation_000.json  generation_001.json  human_audio_demo_gen_001.json  human_audio_demo_gen_002.json  human_audio_demo_gen_003.json  human_audio_demo_gen_004.json  jsi_audio_demo_gen_001.json  jsi_audio_demo_gen_002.json  jsi_audio_demo_gen_003.json  jsi_audio_demo_gen_004.json  jsi_audio_demo_gen_005.json  jsi_audio_demo_gen_006.json
reaper/session-results/: basic_demo_gen_001.rpp  basic_demo_gen_001.rpp-bak  test_single_gen_001.rpp
reaper/sessions/runs/b6657d58_render_001/: midi_notes_sessionb6657d58_render_001_20250830_135409.txt  param_change_sessionb6657d58_render_001_20250830_135409.txt  session_metadata.json
reaper/sessions/runs/b6657d58_render_001/session_b6657d58_render_001/logs/: render_log_render_20250830_135409.txt
reaper/sessions/runs/b6657d58_render_002/: session_metadata.json
reaper/sessions/runs/test_random_session_20250830_111440/: automation_config.txt  midi_config_render_002.json  midi_notes_sessionb6657d58_20250830_140109.txt  midi_notes_sessionb6657d58_20250830_140316.txt  param_change_sessionb6657d58_20250830_140109.txt  param_change_sessionb6657d58_20250830_140316.txt  params_sessionb6657d58_20250830_140109.txt
reaper/sessions/runs/test_random_session_20250830_111440/session_b6657d58/logs/: render_log_render_001_20250830_140109.txt  render_log_render_002_20250830_140316.txt
reaper/src/: __init__.py  audio_analyzer.py  config.py  lua_interface.py  parameter_sweep.py  reaper_process.py  session_manager.py  vision_debugger.py  workflow_orchestrator.py
reaper/tests/: __init__.py  conftest.py  test_audio_analyzer.py  test_audio_analyzer_integration.py  test_e2e_workflow.py  test_enhanced_config.py  test_main.py
sandbox/docker_gui_experiments/: Makefile  README.md  pyproject.toml  setup_all.sh
sandbox/docker_gui_experiments/vnc-server/: Dockerfile  README.md  docker-compose.yml
sandbox/docker_gui_experiments/vnc-server/test_apps/: run_tests.sh  simple_gui.py
sandbox/docker_gui_experiments/x11-forwarding/: Dockerfile  README.md  docker-compose.yml  setup.sh
sandbox/docker_gui_experiments/x11-forwarding/test_apps/: run_tests.sh  simple_gui.py
sandbox/ga_jsi_audio_oracle/: pyproject.toml  test_demo.py
sandbox/ga_jsi_audio_oracle/ga_jsi_audio_oracle/: audio_oracle.py  ga_problem.py  jsi_ga_integration.py  main.py
sandbox/ga_jsi_audio_oracle/tests/: __init__.py  test_audio_oracle.py  test_jsi_integration.py
sandbox/libraries/choix_active_online/: main.py  pyproject.toml
sandbox/libraries/choix_active_online/tests/: __init__.py  test_live_ranking_engine.py
sandbox/libraries/choix_basic/: pyproject.toml  simple_example.py
sandbox/libraries/choix_basic/tests/: __init__.py  test_bradley_terry.py
(+134 files in other folders)
