[project]
name = "autodaw"
version = "0.1.0"
description = "Automated Digital Audio Workstation with GA+JSI+Audio Oracle optimization"
authors = [
    {name = "Anthony Becker", email = "anthony@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pymoo>=0.6.0",
    "librosa>=0.10.0",
    "choix>=0.3.5",
    "rich>=13.0.0",
    "numpy>=1.24.0",
    "soundfile>=0.12.0",
    "pydantic>=2.4.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]

test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "fastapi[test]>=0.104.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "integration: marks tests as integration tests",
    "performance: marks tests as performance tests",
    "edge_cases: marks tests as edge case tests",
    "end_to_end: marks tests as end-to-end workflow tests",
    "slow: marks tests as slow-running tests",
]

[tool.uv]
dev-dependencies = []
