[project]
name = "ga-frequency-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "librosa>=0.11.0",
    "numpy>=2.2.6",
    "pymoo>=0.6.1.5",
    "soundfile>=0.13.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]
