[project]
name = "docker-gui-experiments"
version = "0.1.0"
description = "Experiments with Docker containers running GUI applications on macOS"
authors = [
    {name = "Anthony Becker", email = "anthony@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "docker",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
