[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ga-jsi-audio-oracle"
version = "0.1.0"
description = "Integration of Genetic Algorithm, Just Sort It (JSI), and Audio Oracle for REAPER optimization"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "AutoDAW Project"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.21.0",
    "librosa>=0.10.0",
    "pymoo>=0.6.0",
    "choix>=0.3.5",
    "rich>=13.0.0",
    "pathlib",
    "soundfile>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/your-org/autodaw"
Repository = "https://github.com/your-org/autodaw"
Issues = "https://github.com/your-org/autodaw/issues"

[project.scripts]
ga-jsi-audio-demo = "ga_jsi_audio_oracle.main:main"

[tool.hatch.build.targets.wheel]
packages = ["ga_jsi_audio_oracle"]

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
markers = [
    "integration: marks tests as integration tests (may be slow)",
    "unit: marks tests as unit tests (fast)",
]
