[project]
name = "choix-active-online-demo"
version = "0.1.0"
description = "Active learning Bradley-Terry model with TUI interface for human-in-the-loop ranking"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.6",
    "scipy>=1.15.0",
    "choix>=0.3.5",
    "pandas>=2.2.5",
    "rich>=13.9.6",
    "textual>=0.96.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]
