[project]
name = "choix-demo"
version = "0.1.0"
description = "Bradley-Terry algorithm demonstration with simulated data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.6",
    "matplotlib>=3.10.0",
    "scipy>=1.15.0",
    "choix>=0.3.5",
    "pandas>=2.2.5",
    "seaborn>=0.13.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]
